--- a/markdown-files/semester 1/0-unit/0.0-lesson/0.0.2-material-and-preparation.md
+++ b/markdown-files/semester 1/0-unit/0.0-lesson/0.0.2-material-and-preparation.md
@@ -1,4 +1,4 @@
-Materials & preparation
+# Materials & preparation
 - Lesson 0.1 slide deck
 - Template syllabus
 - Teaching tips in the Unit 0 overview document
