--- a/teacher-book/semester 1/4-unit/4.4-lesson/4.4.0-overview.md
+++ b/teacher-book/semester 1/4-unit/4.4-lesson/4.4.0-overview.md
@@ -1,2 +1,3 @@
-Overview
+# Overview
+
 Over the next several days, students will work on big projects to demonstrate their use of functions and all the other skills that they have learned so far.
