--- a/teacher-book/semester 1/4-unit/4.4-lesson/4.4.3-lab-introduction.md
+++ b/teacher-book/semester 1/4-unit/4.4-lesson/4.4.3-lab-introduction.md
@@ -1,4 +1,6 @@
-Lab introduction
-Review Student Guide 4.5 with students.
-Review the rubric so students know what to expect. The only new criterion for unit 4 is the use of functions in meaningful and appropriate ways.
-Make sure students know when their projects are due.
+# Lab introduction
+
+1. Review Student Guide 4.5 with students.
+1. Review the rubric so students know what to expect. The only new criterion for unit 4 is the use of functions in meaningful and appropriate ways.
+   
+2. Make sure students know when their projects are due.
