--- a/teacher-book/semester 1/4-unit/4.4-lesson/4.4.4-lab-activity.md
+++ b/teacher-book/semester 1/4-unit/4.4-lesson/4.4.4-lab-activity.md
@@ -1,5 +1,8 @@
-Lab activity
+# Lab activity
+
 The unit project is expected to take about a week (five school days) to complete. The rubric outlines the requirements for the project.
-Students may not have project ideas they think will work. Encourage them to move forward and help them add features which will satisfy the rubrics.
-Encourage students to play test their games and also have other students play test them.
-Some students may be very excited to implement a project that uses playing cards based on their work in Lab 4.3. Be careful in approving these projects, as card games often are very complex.
+
+- Students may not have project ideas they think will work. Encourage them to move forward and help them add features which will satisfy the rubrics.
+- Encourage students to play test their games and also have other students play test them.
+  
+- Some students may be very excited to implement a project that uses playing cards based on their work in Lab 4.3. Be careful in approving these projects, as card games often are very complex.
