--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.4-bell-ringer.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.4-bell-ringer.md
@@ -1,6 +1,9 @@
-Bell ringer
+# Bell ringer
+
 From the Bell Ringer, review the questions:
-How easy was it to create a patch of grass using sprites?
-Were you able to prevent the Player from walking through the Wall sprite?
-How easy or hard would it be to create a large patch of grass?
-What about a long wall for a maze?
+
+1. How easy was it to create a patch of grass using sprites?
+1. Were you able to prevent the Player from walking through the Wall sprite?
+1. How easy or hard would it be to create a large patch of grass?
+   
+1. What about a long wall for a maze?
