--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.5-lab-introduction.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.5-lab-introduction.md
@@ -1,45 +1,47 @@
-Lab introduction
-Introduce the concept of a tilemap.
-A tilemap is a way to build a game world or level using a set of regularly shaped images called tiles.
-The example of a level in Super Mario Brothers is given, highlighting that the same items appear in the same place every time the game is played. This is because these items are defined on a tilemap.
-Highlight the design aspect of the tilemap:
-The tilemap and tiles can be designed without needing to write code.
-The code for the game uses the tilemap but can also use other tilemaps.
-This is the perfect place for artistic students to flex their creativity.
-Games of all kinds—both 2D and 3D—use tilemaps.
-Show the students how to get to the Tilemap Editor:
-Add the set tilemap block to the Code Editor.
-Click the tile shown to enter the Tilemap Editor.
-Take a few minutes to show how it works; they will get a chance to use it in depth in the lab.
-Compare this to the Image Editor they’ve already used and highlight the similarities.
-Ask students what they think they can do with tilemaps?
-Highlight any answer which corresponds with those on the slide.
-Show students how a sprite moves when a tilemap is used.
-The edges of the tilemap define the edges of the world; the sprite cannot move past the edges of the tilemap.
-However, the sprite can move off the screen, because the tilemap is bigger than the screen.
-Ask students how they think they can fix that.
-Introduce the camera follow block.
-Tell students the camera shows the world on the screen.
-By moving the camera, you can view different parts of the world.
-One quick way to do this is to have the camera always follow the player sprite, so they are always on the screen.
-Show students how to make walls in the tilemap editor.
-Walls prevent sprites from moving through them.
-These will be useful later when talking about platformers.
-For now, they can be used to make mazes or block sprites from moving to places they shouldn’t.
-Remind students that in many games, the player, goodies, and enemies are often found in the same places every time.
-This is because a special tile called a placeholder was used.
-The placeholder is replaced by the sprite when the tilemap is loaded.
-They can define many different placeholder tiles defined for any sprites they want to place.
-There are three steps to replace a placeholder with a sprite.
-First, they need to find all the placeholders on the tilemap using a loop and the array of all locations block.
-Then, they use the place sprite on top of block to place the sprite on top of the placeholder.
-Finally, they set a blank tile on top of the placeholder tile to remove it.
-They’ll have many chances to work through these steps in the lab.
-Refactoring is an important step in finalizing the code.
-The code may be long and difficult to understand.
-By creating functions and adding comments now, they will make their code easier to read and modify later.
-Tell them it may seem silly, but refactoring is a gift for “You-In-The-Future”.
-You-In-The-Future may not remember why you did what you did now.
-Review Student Guide 5.1 document with the students. Make sure they understand the rubric for the lab.
-Review the questions at the end of each section and the quiz at the end of the lab.
+# Lab introduction
+
+1. Introduce the concept of a tilemap.\
+a. A tilemap is a way to build a game world or level using a set of regularly shaped images called tiles.\
+b. The example of a level in Super Mario Brothers is given, highlighting that the same items appear in the same place every time the game is played. This is because these items are defined on a tilemap.
+1. Highlight the design aspect of the tilemap:\
+a. The tilemap and tiles can be designed without needing to write code.\
+b. The code for the game uses the tilemap but can also use other tilemaps.\
+c. This is the perfect place for artistic students to flex their creativity.\
+d. Games of all kinds—both 2D and 3D—use tilemaps.
+1. Show the students how to get to the Tilemap Editor:\
+a. Add the set tilemap block to the Code Editor.\
+b. Click the tile shown to enter the Tilemap Editor.\
+c. Take a few minutes to show how it works; they will get a chance to use it in depth in the lab.\
+d. Compare this to the Image Editor they’ve already used and highlight the similarities.
+1. Ask students what they think they can do with tilemaps?\
+a. Highlight any answer which corresponds with those on the slide.
+1. Show students how a sprite moves when a tilemap is used.\
+a. The edges of the tilemap define the edges of the world; the sprite cannot move past the edges of the tilemap.\
+b. However, the sprite can move off the screen, because the tilemap is bigger than the screen.\
+c. Ask students how they think they can fix that.
+1. Introduce the camera follow block.\
+a. Tell students the camera shows the world on the screen.\
+b. By moving the camera, you can view different parts of the world.\
+c. One quick way to do this is to have the camera always follow the player sprite, so they are always on the screen.
+1. Show students how to make walls in the tilemap editor.\
+a. Walls prevent sprites from moving through them.\
+b. These will be useful later when talking about platformers.\
+c. For now, they can be used to make mazes or block sprites from moving to places they shouldn’t.
+1. Remind students that in many games, the player, goodies, and enemies are often found in the same places every time.\
+a. This is because a special tile called a placeholder was used.\
+b. The placeholder is replaced by the sprite when the tilemap is loaded.\
+c. They can define many different placeholder tiles defined for any sprites they want to place.
+1. There are three steps to replace a placeholder with a sprite.\
+a. First, they need to find all the placeholders on the tilemap using a loop and the array of all locations block.\
+b. Then, they use the place sprite on top of block to place the sprite on top of the placeholder.\
+c. Finally, they set a blank tile on top of the placeholder tile to remove it.\
+d. They’ll have many chances to work through these steps in the lab.
+1. Refactoring is an important step in finalizing the code.\
+a. The code may be long and difficult to understand.\
+b. By creating functions and adding comments now, they will make their code easier to read and modify later.\
+c. Tell them it may seem silly, but refactoring is a gift for “You-In-The-Future”.\
+d. You-In-The-Future may not remember why you did what you did now.
+1. Review Student Guide 5.1 document with the students. Make sure they understand the rubric for the lab.
+   
+2. Review the questions at the end of each section and the quiz at the end of the lab.
 
