--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.6-lab-activity.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.6-lab-activity.md
@@ -1,7 +1,13 @@
-Lab activity
+# Lab activity
+
 The lab has five parts:
-Part 1 introduces the concept of tilemaps and how to edit them. This is fundamental to the rest of the lab. If students do not understand this, they will not succeed in the rest of the lab. Be prepared to provide support.
-Part 2 builds on the tilemap from part 1 to add walls. Walls will be used in later lessons to define a platform game.
-Part 3 continues to build the tilemaps, showing students how to use placeholders to add animated images to their games. Students will use skills learned during the animated sprite lesson here.
-Part 4 expands on the placeholders lesson, showing students how to place food and enemies on the tilemap.
-Part 5 has students refactor their code to make it easier to read and improve, then asks them to add items as they see fit. Students who are struggling may be allowed to skip this step.
+
+**Part 1** introduces the concept of tilemaps and how to edit them. This is fundamental to the rest of the lab. If students do not understand this, they will not succeed in the rest of the lab. Be prepared to provide support.
+
+**Part 2** builds on the tilemap from part 1 to add walls. Walls will be used in later lessons to define a platform game.
+
+**Part 3** continues to build the tilemaps, showing students how to use placeholders to add animated images to their games. Students will use skills learned during the animated sprite lesson here.
+
+**Part 4** expands on the placeholders lesson, showing students how to place food and enemies on the tilemap.
+
+**Part 5** has students refactor their code to make it easier to read and improve, then asks them to add items as they see fit. Students who are struggling may be allowed to skip this step.
