--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.7-accommodations-and-differentiation.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.7-accommodations-and-differentiation.md
@@ -1,9 +1,14 @@
-Accommodations & differentiation
-Students who struggle with Part 1 will have issues with later parts. Be prepared to help with Part 1.
-Students may struggle with the fact that the tilemap is bigger than what is displayed on the screen. The screen acts like a window, through which the player sees the world. The camera helps to define the window they are looking through. Just because the world isn’t visible doesn’t mean it isn’t still there.
-Students may want to design a platformer style game right away. They should be told this will come soon, and they should work on a more top-down map.
-Part 3 on placeholders may give students some issues.
-Students may wonder why they can’t place the sprite directly while editing the tilemap. This is because they are editing a tilemap, which contains only static images. Sprites can move and interact with other sprites, which means they have to be added later.
-Students with more interest in design may wish to skip certain parts of the lab to focus on designing their own tiles. Skippable parts include:
-Part 3, adding a second animated sprite. Adding one may be sufficient to drive the lesson.
-Part 4, adding an Enemy sprite in step 3. This duplicates the previous Food sprite in step 2.
+# Accommodations & differentiation
+
+- Students who struggle with Part 1 will have issues with later parts. Be prepared to help with Part 1.
+  - Students may struggle with the fact that the tilemap is bigger than what is displayed on the screen. The screen acts like a window, through which the player sees the world. The camera helps to define the window they are looking through. Just because the world isn’t visible doesn’t mean it isn’t still there.
+
+  - Students may want to design a platformer style game right away. They should be told this will come soon, and they should work on a more top-down map.
+
+- Part 3 on placeholders may give students some issues.
+  - Students may wonder why they can’t place the sprite directly while editing the tilemap. This is because they are editing a tilemap, which contains only static images. Sprites can move and interact with other sprites, which means they have to be added later.
+
+- Students with more interest in design may wish to skip certain parts of the lab to focus on designing their own tiles. Skippable parts include:
+  - Part 3, adding a second animated sprite. Adding one may be sufficient to drive the lesson.
+  
+  - Part 4, adding an Enemy sprite in step 3. This duplicates the previous Food sprite in step 2.
