--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.8-quiz.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.8-quiz.md
@@ -1,27 +1,29 @@
-Quiz
-A controlled sprite is:
-Moved by the computer
-Regulated so it isn’t used too often
-Controlled by the buttons
-Only available to advanced programmers
-Tilemaps are used to (circle all that apply):
-Design all the elements of a game map
-Avoid writing code to make things happen
-Define walls the player and enemies can’t move through
-Limit movement of the player to the defined game map
-Tell you how to get from one tile to another
-Placeholder tiles are useful for (circle all that apply):
-Adding food, enemies, and other elements
-Keeping track of high scores
-Adding animated elements
-Filling up the tilemap with colorful tiles
-The block which allows you to loop over a collection of specific tiles is called:
-for each tile in collection
-set tile at tilemap
-place mySprite on top of 
-array of all locations
-What block is used to keep a sprite on the screen no matter how it moves?
-set mySprite stay on screen true
-camera follow sprite
-keep mySprite on screen on
-set ghost on
+# Quiz
+
+1. A controlled sprite is:\
+a. Moved by the computer\
+b. Regulated so it isn’t used too often\
+c. Controlled by the buttons\
+d. Only available to advanced programmers
+1. Tilemaps are used to (circle all that apply):\
+a. Design all the elements of a game map\
+b. Avoid writing code to make things happen\
+c. Define walls the player and enemies can’t move through\
+d. Limit movement of the player to the defined game map\
+e. Tell you how to get from one tile to another
+1. Placeholder tiles are useful for (circle all that apply):\
+a. Adding food, enemies, and other elements\
+b. Keeping track of high scores\
+c. Adding animated elements\
+d. Filling up the tilemap with colorful tiles
+1. The block which allows you to loop over a collection of specific tiles is called:\
+a. for each tile in collection\
+b. set tile at tilemap\
+c. place mySprite on top of \
+d. array of all locations
+
+1. What block is used to keep a sprite on the screen no matter how it moves?\
+a. set mySprite stay on screen true\
+b. camera follow sprite\
+c. keep mySprite on screen on\
+d. set ghost on
