--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.1-learning-objectives.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.1-learning-objectives.md
@@ -1,7 +1,8 @@
-Learning objectives
+# Learning objectives
+
 By the end of this lesson, students will be able to:
-Create event handlers when a player walks over a tile
-Create event handlers when a sprite hits a wall
-Install MakeCode Arcade extensions
-Define sprite animations that change when the sprite changes directions
-Create and switch between multiple tilemaps
+- Create event handlers when a player walks over a tile
+- Create event handlers when a sprite hits a wall
+- Install MakeCode Arcade extensions
+- Define sprite animations that change when the sprite changes directions
+- Create and switch between multiple tilemaps
