--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.3-pacing-guide.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.3-pacing-guide.md
@@ -1,12 +1,9 @@
-Pacing Guide
-Duration
-Description
-5 minutes
-Welcome, announcements, bell ringer
-5 minutes
-Lab introduction
-40 minutes
-Lab work
-5 minutes
-Debrief
+# Pacing Guide
+
+Duration|Description
+-|-
+5 minutes|Welcome, announcements, bell ringer
+5 minutes|Lab introduction
+40 minutes|Lab work
+5 minutes|Debrief
 
