--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.4-bell-ringer.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.4-bell-ringer.md
@@ -1,6 +1,8 @@
-Bell ringer
-Review the questions from the bell ringer:
-How easy was it to create a sprite that looked just like a tile?
-What happened when you destroyed the sprite? Did the tile remain?
-Do you think you could use this same technique to destroy a wall tile? Why or why not?
-For this last question, tell students they will see whether they are right in the lab.
+# Bell ringer
+
+1. Review the questions from the bell ringer:\
+a. How easy was it to create a sprite that looked just like a tile?\
+b. What happened when you destroyed the sprite? Did the tile remain?\
+c. Do you think you could use this same technique to destroy a wall tile? Why or why not?
+
+*For this last question, tell students they will see whether they are right in the lab.*
