--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.7-accommodations-and-differentiation.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.7-accommodations-and-differentiation.md
@@ -1,6 +1,7 @@
-Accommodations & differentiation
-Students with more interest in design may find designing their own tiles and sprites more captivating. They may lose time working on coding aspects and may require some instructor time management.
-You may wish to pair them with a more coding-focused student to ensure a completed lab.
-Part 4 may require support as it requires students to make several changes to their existing code.
-Code for activating the tilemap and setting sprites on placeholders will be refactored into the new loadLevel function. In addition, students need to add code to remove old enemy and food sprites. You may wish to show students what happens when they don’t do this, showing the proliferation of enemies as they move between levels.
-Ensure that students have access to and can install the arcade-character-animation extension before starting Part 3.
+# Accommodations & differentiation
+
+- Students with more interest in design may find designing their own tiles and sprites more captivating. They may lose time working on coding aspects and may require some instructor time management.
+  - You may wish to pair them with a more coding-focused student to ensure a completed lab.
+- Part 4 may require support as it requires students to make several changes to their existing code.
+  - Code for activating the tilemap and setting sprites on placeholders will be refactored into the new loadLevel function. In addition, students need to add code to remove old enemy and food sprites. You may wish to show students what happens when they don’t do this, showing the proliferation of enemies as they move between levels.
+- Ensure that students have access to and can install the arcade-character-animation extension before starting Part 3.
