--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.8-quiz.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.8-quiz.md
@@ -1,18 +1,23 @@
-Quiz
-True or False: You can replace tiles in a tilemap programmatically (i.e., with blocks)
-True
-False
-True or False: Once you define a wall on your tilemap, it can never be removed.
-True
-False
-Extensions allow you to (circle all that apply):
-Add new functionality to Makecode Arcade
-Play your game for longer than normal
-Provide new blocks for you to add to your games
-Install your games on Xbox and PS4
-True or False: The character animation block always loops its animation.
-True
-False
-True or False: You can only have two tilemaps active.
-True
-False
+# Quiz
+
+1. True or False: You can replace tiles in a tilemap programmatically (i.e., with blocks)\
+a. True\
+b. False
+
+1. True or False: Once you define a wall on your tilemap, it can never be removed.\
+a. True\
+b. False
+
+1. Extensions allow you to (circle all that apply):\
+a. Add new functionality to Makecode Arcade\
+b. Play your game for longer than normal\
+c. Provide new blocks for you to add to your games\
+d. Install your games on Xbox and PS4
+
+1. True or False: The character animation block always loops its animation.\
+a. True\
+b. False
+
+1. True or False: You can only have two tilemaps active.\
+a. True\
+b. False
