--- a/teacher-book/semester 1/5-unit/5.2-lesson/5.2.0-overview.md
+++ b/teacher-book/semester 1/5-unit/5.2-lesson/5.2.0-overview.md
@@ -1,2 +1,3 @@
-Overview
+# Overview
+
 Today, you and the students will learn about platformer games. Students will learn what they are and how they differ from other tilemap based games. They will review some guidelines for designing levels for platformers and apply them to their platformer. They will learn how to make sprites jump and fall realistically using gravity and how to remove magic numbers from their code. In the end, they will have a basic platformer they can build on for future projects.
