--- a/teacher-book/semester 1/5-unit/5.2-lesson/5.2.8-quiz.md
+++ b/teacher-book/semester 1/5-unit/5.2-lesson/5.2.8-quiz.md
@@ -1,24 +1,29 @@
-Quiz
-When designing the first level of your game, you should remember to:
-Place an unbeatable enemy close to the player.
-Make coins impossible to miss.
-Make any jumps the player must do too difficult to achieve.
-Hide things from the user and surprise them later.
-Tiles that a player can walk on in a platformer are called:
-Walked on tiles
-Linoleum tiles
-Ground tiles
-Platform tiles
-Gravity can be simply defined as:
-Acceleration in any direction
-Acceleration forward in a car
-Acceleration on a trampoline
-Acceleration towards the ground
-True or False: You should be able to figure out the correct gravity and jump strengths to use the first time around.
-True
-False
-Magic numbers are (circle all that apply):
-Undocumented numbers used in your code
-Special numbers given by a wizard
-Difficult to change and reuse
-Responsible for pulling rabbits out of hats
+# Quiz
+
+1. When designing the first level of your game, you should remember to:\
+a. Place an unbeatable enemy close to the player.\
+b. Make coins impossible to miss.\
+c. Make any jumps the player must do too difficult to achieve.\
+d. Hide things from the user and surprise them later.
+
+1. Tiles that a player can walk on in a platformer are called:\
+a. Walked on tiles\
+b. Linoleum tiles\
+c. Ground tiles\
+d. Platform tile
+s
+1. Gravity can be simply defined as:\
+a. Acceleration in any direction\
+b. Acceleration forward in a car\
+c. Acceleration on a trampoline\
+d. Acceleration towards the ground
+
+1. True or False: You should be able to figure out the correct gravity and jump strengths to use the first time around.\
+a. True\
+b. False
+
+1. Magic numbers are (circle all that apply):\
+a. Undocumented numbers used in your code\
+b. Special numbers given by a wizard\
+c. Difficult to change and reuse\
+d. Responsible for pulling rabbits out of hats
