--- a/teacher-book/semester 1/5-unit/5.3-lesson/5.3.2-materials-and-preparation.md
+++ b/teacher-book/semester 1/5-unit/5.3-lesson/5.3.2-materials-and-preparation.md
@@ -1,3 +1,4 @@
-Materials & preparation
-Student Guide 5.4: Advanced platformers
-Lesson 5.4 slide deck
+# Materials & preparation
+
+- Student Guide 5.4: Advanced platformers
+- Lesson 5.4 slide deck
