--- a/teacher-book/semester 1/5-unit/5.3-lesson/5.3.7-accommodations-and-differentiation.md
+++ b/teacher-book/semester 1/5-unit/5.3-lesson/5.3.7-accommodations-and-differentiation.md
@@ -1,7 +1,9 @@
-Accommodations & differentiation
-Students who have struggled with 5.3 may have issues here. Be prepared to offer assistance with Part 1 to get them started.
-The instruction and lab can be long; splitting them up into two days can be considered. You can split the lessons between days, with Parts 1-3 and Part 6 (animating coins and basic jumping techniques) on Day 1, and Parts 4 and 5 (changing sprite kinds and delaying actions) on Day 2.
-Part 5 on delayed actions has the most new concepts of any of the other sections due to the introduction of flags and the reasoning behind using them.
+# Accommodations & differentiation
 
+- Students who have struggled with 5.3 may have issues here. Be prepared to offer assistance with Part 1 to get them started.
+- The instruction and lab can be long; splitting them up into two days can be considered. You can split the lessons between days, with Parts 1-3 and Part 6 (animating coins and basic jumping techniques) on Day 1, and Parts 4 and 5 (changing sprite kinds and delaying actions) on Day 2.
+- Part 5 on delayed actions has the most new concepts of any of the other sections due to the introduction of flags and the reasoning behind using them.
+  \
 Students may have questions during instruction. Ask them to hold them until after they complete Part 5 of the lab, if possible. Seeing the actual code at work may help to clarify the concepts.
-The concept of the coyote jump is also sometimes called coyote time and is well defined at https://www.urbandictionary.com/define.php?term=Coyote%20time. It can be implemented in many different ways; the method shown here is the simplest for Makecode.
+
+- The concept of the coyote jump is also sometimes called coyote time and is well defined at https://www.urbandictionary.com/define.php?term=Coyote%20time. It can be implemented in many different ways; the method shown here is the simplest for Makecode.
