--- a/teacher-book/semester 1/5-unit/5.3-lesson/5.3.8-quiz.md
+++ b/teacher-book/semester 1/5-unit/5.3-lesson/5.3.8-quiz.md
@@ -1,25 +1,30 @@
-Quiz
-Random items a player can collect in the game are called:
-Power-ups
-Pickups
-Coins and stuff
-Thingies
-What are some typical restrictions on a double jump (circle all that apply):
-The jumper is prevented from firing a weapon.
-Jumps in midair don’t happen if the player fell from a platform.
-Only two jumps are allowed at any time.
-Once the player jumps, they can never jump again.
-When a Player lands on an Enemy, which of the following conditions must be true?
-The Player’s x must be greater than the Enemy’s x.
-The Player’s y must be greater than the Enemy’s y.
-The Player’s x must be less than the Enemy’s x.
-The Player’s y must be less than the Enemy’s y.
-Flag variables can be used to do what (circle all that apply)?
-Delay an action to a later time.
-Show that the Queen is currently in the residence.
-Count the number of times a player has jumped.
-Avoid races between event handlers.
-Indicate a condition has been met.
-True or False: Wile E. Coyote is a great role model for us all.
-True
-False
+# Quiz
+
+1. Random items a player can collect in the game are called:\
+a. Power-ups\
+b. Pickups\
+c. Coins and stuff\
+d. Thingies
+
+1. What are some typical restrictions on a double jump (circle all that apply):\
+a. The jumper is prevented from firing a weapon.\
+b. Jumps in midair don’t happen if the player fell from a platform.\
+c. Only two jumps are allowed at any time.\
+d. Once the player jumps, they can never jump again.
+
+1. When a Player lands on an Enemy, which of the following conditions must be true?\
+a. The Player’s x must be greater than the Enemy’s x.\
+b. The Player’s y must be greater than the Enemy’s y.\
+c. The Player’s x must be less than the Enemy’s x.\
+d. The Player’s y must be less than the Enemy’s y.
+
+1. Flag variables can be used to do what (circle all that apply)?\
+a. Delay an action to a later time.\
+b. Show that the Queen is currently in the residence.\
+c. Count the number of times a player has jumped.\
+d. Avoid races between event handlers.\
+e. Indicate a condition has been met.
+
+1. True or False: Wile E. Coyote is a great role model for us all.\
+a. True\
+b. False
