--- a/teacher-book/semester 1/5-unit/5.4-lesson/5.4.1-materials-and-preparation.md
+++ b/teacher-book/semester 1/5-unit/5.4-lesson/5.4.1-materials-and-preparation.md
@@ -1,4 +1,5 @@
-Materials & preparation
-Student Guide 5.5: Unit Project
-Lesson 5.5 slide deck
-Game Planning Worksheet
+# Materials & preparation
+
+- Student Guide 5.5: Unit Project
+- Lesson 5.5 slide deck
+- Game Planning Worksheet
