--- a/teacher-book/semester 1/5-unit/5.4-lesson/5.4.4-lab-activity.md
+++ b/teacher-book/semester 1/5-unit/5.4-lesson/5.4.4-lab-activity.md
@@ -1,4 +1,5 @@
-Lab activity
+# Lab activity
+
 The unit project is expected to take the bulk of five school days to complete. The rubric outlines the requirements for the game and includes most of the requirements from the previous unit as well as lessons from this unit.
-Students may not have game ideas they think will work. Encourage them to move forward and help them add features that will satisfy the rubrics.
-Encourage students to play test their games and to also have other students play test them.
+- Students may not have game ideas they think will work. Encourage them to move forward and help them add features that will satisfy the rubrics.
+- Encourage students to play test their games and to also have other students play test them.
