--- a/teacher-book/semester 1/4-unit/4.4-lesson/4.4.2-pacing-guide.md
+++ b/teacher-book/semester 1/4-unit/4.4-lesson/4.4.2-pacing-guide.md
@@ -1,10 +1,8 @@
-Pacing guide (Each of five days)
-Duration
-Description
-5 minutes
-Welcome, announcements, bell ringer
-45 minutes
-Lab work
-5 minutes
-Debrief
+# Pacing guide (Each of five days)
+
+Duration|Description
+-|-
+5 minutes|Welcome, announcements, bell ringer
+45 minutes|Lab work
+5 minutes|Debrief
 
