--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.2-materials-and-preparation.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.2-materials-and-preparation.md
@@ -1,4 +1,5 @@
-Materials & preparation
-Bell Ringer 5.1
-Student Guide 5.1: Tilemaps
-Lesson 5.1 slide deck
+# Materials & preparation
+
+- Bell Ringer 5.1
+- Student Guide 5.1: Tilemaps
+- Lesson 5.1 slide deck
