--- a/teacher-book/semester 1/5-unit/5.0-lesson/5.0.b-assessment-and-grading.md
+++ b/teacher-book/semester 1/5-unit/5.0-lesson/5.0.b-assessment-and-grading.md
@@ -1,47 +1,26 @@
-Assessment & grading
-Lab 5.1 criteria
-Point values
-Part 1
-(3 total points)
-Basic tilemap created
-2 points
-camera follow block added
-1 point
-set background color block added
-1 point
-Part 2
-(2 total points)
-New tiles added to tilemaps
-1 point
-New tiles marked as walls
-1 point
-Part 3
-(9 total points)
-Placeholder for animated sprites used properly
-2 points
-for element loop set up properly
-1 point
-array of all locations block used properly
-1 point
-Animated sprite placed properly
-1 point
-Placeholder tile removed properly
-1 point
-Second placeholder set up and used properly
-3 points
-Part 4
-(6 total points)
-Placeholder for Food sprite added properly
-2 points
-Placeholder for Enemy sprite added properly
-2 points
-Event handlers for Food and Enemy sprites set up and used properly
-2 points
-Part 5
-(6 total points)
-for element loops refactored properly
-4 points
-Additional work done on tilemap
-2 points
-Lab total
-26 total points
+# Assessment & grading
+
+Lab 5.1 criteria|Point values
+-|-
+Part 1|(3 total points)
+Basic tilemap created|2 points
+camera follow block added|1 point
+set background color block added|1 point
+Part 2|(2 total points)
+New tiles added to tilemaps|1 point
+New tiles marked as walls|1 point
+Part 3|(9 total points)
+Placeholder for animated sprites used properly|2 points
+for element loop set up properly|1 point
+array of all locations block used properly|1 point
+Animated sprite placed properly|1 point
+Placeholder tile removed properly|1 point
+Second placeholder set up and used properly|3 points
+Part 4|(6 total points)
+Placeholder for Food sprite added properly|2 points
+Placeholder for Enemy sprite added properly|2 points
+Event handlers for Food and Enemy sprites set up and used properly|2 points
+Part 5|(6 total points)
+for element loops refactored properly|4 points
+Additional work done on tilemap|2 points
+**Lab total**|**26 total points**
