--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.0-overview.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.0-overview.md
@@ -1,2 +1,3 @@
-Overview
+# Overview
+
 Today, you and the students will learn more about tilemaps by adding lots of new features to your game. They’ll learn how to handle events when a player walks over a specific tile, detect when something hits a wall, create and move between multiple tilemaps, and explore alternate animations.
