--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.2-materials-and-preparation.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.2-materials-and-preparation.md
@@ -1,4 +1,5 @@
-Materials & preparation
-Bell Ringer 5.2
-Student Guide 5.2: More tilemaps
-Lesson 5.2 slide deck
+# Materials & preparation
+
+- Bell Ringer 5.2
+- Student Guide 5.2: More tilemaps
+- Lesson 5.2 slide deck
