--- a/teacher-book/semester 1/5-unit/5.1-lesson/5.1.6-lab-activity.md
+++ b/teacher-book/semester 1/5-unit/5.1-lesson/5.1.6-lab-activity.md
@@ -1,12 +1,17 @@
-Lab activity
+# Lab activity
+
 The lab has four parts:
-Part 1 shows students how to use the on sprite of kind Player overlaps tile block.
-Part 2 shows students how the on sprite of kind Player hits wall block works.
-This part also shows students how to remove wall tiles from their tilemap programmatically.
-Part 3 shows students how to install and use extensions.
-Students will install an extension that makes animating sprites easier.
-They will then use this extension to make their sprite animate differently based on which way it’s moving.
-It also has a small bonus item that allows students to add an idle animation to their player sprite.
-Part 4 shows students how to use and manage multiple tilemaps.
-Students will use a variable and a custom function to manage which tilemap is shown.
-They will also create special tiles on their tilemaps that allow the player to switch tilemaps by walking over a portal or doorway.
+
+**Part 1** shows students how to use the on sprite of kind Player overlaps tile block.
+
+**Part 2** shows students how the on sprite of kind Player hits wall block works.\
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a. This part also shows students how to remove wall tiles from their tilemap programmatically.
+
+**Part 3** shows students how to install and use extensions.\
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a. Students will install an extension that makes animating sprites easier.\
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;b. They will then use this extension to make their sprite animate differently based on which way it’s moving.\
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;c. It also has a small bonus item that allows students to add an idle animation to their player sprite.
+
+**Part 4** shows students how to use and manage multiple tilemaps.\
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a. Students will use a variable and a custom function to manage which tilemap is shown.\
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;b. They will also create special tiles on their tilemaps that allow the player to switch tilemaps by walking over a portal or doorway.
