--- a/teacher-book/semester 1/5-unit/5.2-lesson/5.2.1-learning-objectives.md
+++ b/teacher-book/semester 1/5-unit/5.2-lesson/5.2.1-learning-objectives.md
@@ -1,6 +1,7 @@
-Learning objectives
+# Learning objectives
+
 By the end of this lesson, students will be able to:
-Define what a platformer is
-Create tilemaps that work for platformer games
-Create player sprites that can jump and fall realistically
-Use placeholders to add coins and enemies
+- Define what a platformer is
+- Create tilemaps that work for platformer games
+- Create player sprites that can jump and fall realistically
+- Use placeholders to add coins and enemies
