--- a/teacher-book/semester 1/5-unit/5.2-lesson/5.2.2-materials-and-preparation.md
+++ b/teacher-book/semester 1/5-unit/5.2-lesson/5.2.2-materials-and-preparation.md
@@ -1,4 +1,5 @@
-Materials & preparation
-Bell Ringer 5.3
-Student Guide 5.3: Platformers
-Lesson 5.3 slide deck
+# Materials & preparation
+
+- Bell Ringer 5.3
+- Student Guide 5.3: Platformers
+- Lesson 5.3 slide deck
