--- a/teacher-book/semester 1/5-unit/5.2-lesson/5.2.3-pacing-guide.md
+++ b/teacher-book/semester 1/5-unit/5.2-lesson/5.2.3-pacing-guide.md
@@ -1,12 +1,9 @@
-Pacing guide
-Duration
-Description
-5 minutes
-Welcome, announcements, bell ringer
-10 minutes
-Lab introduction
-35 minutes
-Lab work
-5 minutes
-Debrief
+# Pacing guide
+
+Duration|Description
+-|-
+5 minutes|Welcome, announcements, bell ringer
+10 minutes|Lab introduction
+35 minutes|Lab work
+5 minutes|Debrief
 
