--- a/teacher-book/semester 1/5-unit/5.2-lesson/5.2.4-bell-ringer.md
+++ b/teacher-book/semester 1/5-unit/5.2-lesson/5.2.4-bell-ringer.md
@@ -1,5 +1,7 @@
-Bell ringer
+# Bell ringer
+
 From the Bell Ringer, review the questions:
-Did your player sprite move the way you think it should for a platformer?
-What was missing?
-How could you make your player jump? How could you make the player fall?
+1. Did your player sprite move the way you think it should for a platformer?
+1. What was missing?
+   
+1. How could you make your player jump? How could you make the player fall?
