--- a/teacher-book/semester 1/5-unit/5.3-lesson/5.3.1-learning-objectives.md
+++ b/teacher-book/semester 1/5-unit/5.3-lesson/5.3.1-learning-objectives.md
@@ -1,7 +1,8 @@
-Learning objectives
-By the end of this lesson, students will be able to:
-Define the terms pickup, double-jump, coyote jump, and flag
-Implement different jumping mechanisms in a game
-Implement a different attack mechanism in a game
-Delay acting on a condition until a later time
-Add their own animations to items when they are destroyed
+# Learning objectives
+
+- By the end of this lesson, students will be able to:
+- Define the terms pickup, double-jump, coyote jump, and flag
+- Implement different jumping mechanisms in a game
+- Implement a different attack mechanism in a game
+- Delay acting on a condition until a later time
+- Add their own animations to items when they are destroyed
