--- a/teacher-book/semester 1/5-unit/5.3-lesson/5.3.4-welcome.md
+++ b/teacher-book/semester 1/5-unit/5.3-lesson/5.3.4-welcome.md
@@ -1,4 +1,5 @@
-Welcome
+# Welcome
+
 There is no Bell Ringer planned.
-If you want a Bell Ringer, have students work on their 5.3 lab before class.
-Highlight the new game techniques students will learn.
+- If you want a Bell Ringer, have students work on their 5.3 lab before class.
+- Highlight the new game techniques students will learn.
