--- a/teacher-book/semester 1/5-unit/5.4-lesson/5.4.3-lab-introduction.md
+++ b/teacher-book/semester 1/5-unit/5.4-lesson/5.4.3-lab-introduction.md
@@ -1,4 +1,6 @@
-Lab introduction
-Review Student Guide 5.5 with the students. Remind them this is a unit project and they are expected to use as many things as they have learned so far in building their projects.
-Review the rubric so students know what to expect. Criteria have been added from previous projects to reflect the new material they have learned in Unit 5.
-Make sure students know how long they must work on this project.
+# Lab introduction
+
+1. Review Student Guide 5.5 with the students. Remind them this is a unit project and they are expected to use as many things as they have learned so far in building their projects.
+1. Review the rubric so students know what to expect. Criteria have been added from previous projects to reflect the new material they have learned in Unit 5.
+
+1. Make sure students know how long they must work on this project.
